--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
+.username-link {
+  padding-top: 10px;
+}
